--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
+    "@angular/pwa": "^0.803.10",
     "@angular/router": "~8.2.9",
+    "@angular/service-worker": "~8.2.9",
     "hammerjs": "^2.0.8",
     "ngx-quill": "^7.3.4",
     "quill": "^1.3.7",
