--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/pwa": "^0.803.10",
     "@angular/router": "~8.2.9",
     "@angular/service-worker": "~8.2.9",
+    "chroma-js": "^2.1.0",
     "hammerjs": "^2.0.8",
     "ngx-quill": "^7.3.4",
     "quill": "^1.3.7",
