--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "my-angular-app2": {
+    "color-app-angular": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/my-angular-app2",
+            "outputPath": "dist/color-app-angular",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -71,18 +71,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "my-angular-app2:build"
+            "browserTarget": "color-app-angular:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "my-angular-app2:build:production"
+              "browserTarget": "color-app-angular:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "my-angular-app2:build"
+            "browserTarget": "color-app-angular:build"
           }
         },
         "test": {
@@ -121,16 +121,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "my-angular-app2:serve"
+            "devServerTarget": "color-app-angular:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "my-angular-app2:serve:production"
+              "devServerTarget": "color-app-angular:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "my-angular-app2"
+  "defaultProject": "color-app-angular"
 }
